--- a/style/mainPage.scss
+++ b/style/mainPage.scss
@@ -28,8 +28,8 @@
   color: rgb(255, 255, 255);
   display: block;
   line-height: 21px;
-  // text-align: center;
-  margin-left: 500px;
+  text-align: center;
+  margin-right: 50%;
 }
 
 .progress-bg {
