--- a/style/mainPage.scss
+++ b/style/mainPage.scss
@@ -1,3 +1,35 @@
+li a {
+  cursor: pointer;
+}
+
+section {
+  margin-bottom: 50px;
+}
+
+menu {
+  padding: 0;
+}
+
+ul {
+  padding: 0;
+}
+
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: white;
+}
+
+a:hover {
+  color: white;
+}
+
+a:active {
+  color: white;
+}
+
 @for $i from 0 through 100 {
   .progress progress[value="#{$i}"] {
     &+.progress-value:before {
@@ -85,44 +117,6 @@
   }
 }
 
-
-li a {
-  cursor: pointer;
-}
-
-section {
-  margin-bottom: 50px;
-}
-
-html {
-  background-color: rgba(0, 0, 0, 1);
-  color: white;
-}
-
-menu {
-  padding: 0;
-}
-
-ul {
-  padding: 0;
-}
-
-a:link {
-  color: white;
-}
-
-a:visited {
-  color: white;
-}
-
-a:hover {
-  color: white;
-}
-
-a:active {
-  color: white;
-}
-
 .horizontalPlacement {
   display: inline-flex;
 }
@@ -160,6 +154,13 @@ a:active {
     width: 100%;
     height: 100%;
   }
+}
+
+.textInBox {
+  display: flex;
+  justify-content: center;
+  margin-top: 50%;
+  transform: translateY(-50%);
 }
 
 #forInput {
