--- a/style/mainPage.scss
+++ b/style/mainPage.scss
@@ -117,6 +117,7 @@ a:active {
   }
 }
 
+/////////////////////////////////////////////////////////////////////////////////
 .horizontalPlacement {
   display: inline-flex;
 }
@@ -163,6 +164,10 @@ a:active {
   transform: translateY(-50%);
 }
 
+.textInBox::selection {
+  background: transparent;
+}
+
 #forInput {
   background-color: white;
   color: black;
@@ -182,3 +187,127 @@ a:active {
 // .textRemove:hover {
 //   box-shadow: 0 0px 40px 0 rgba(0,0,0,1), 0 0px 50px 0 rgba(0,0,0,1);
 // }
+/////////////////////////////////////////////////////////////////////////////////
+.wrap {
+  position: relative;
+  height: 50px;
+  width: 100px;
+  margin-right: 30px;
+}
+
+section div a p {
+  vertical-align: middle;
+  text-align: center;
+}
+
+section div a {
+  position: absolute;
+  color: #1670f0;
+  height: 100%;
+  width: 100%;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .5);
+  overflow: hidden;
+}
+
+section div:hover a span:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #0c002b, #1779ff);
+  animation: animate1 2s linear infinite;
+}
+
+@keyframes animate1 {
+  0% {
+    transform: translateX(-100%);
+
+  }
+
+  100% {
+    transform: translateX(100%);
+
+  }
+}
+
+section div:hover a span:nth-child(2) {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(to bottom, #0c002b, #1779ff);
+  animation: animate2 2s linear infinite;
+  animation-delay: 1s;
+}
+
+@keyframes animate2 {
+  0% {
+    transform: translateY(-100%);
+
+  }
+
+  100% {
+    transform: translateY(100%);
+
+  }
+}
+
+section div:hover a span:nth-child(3) {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to left, #0c002b, #1779ff);
+  animation: animate3 2s linear infinite;
+}
+
+@keyframes animate3 {
+  0% {
+    transform: translateX(100%);
+
+  }
+
+  100% {
+    transform: translateX(-100%);
+
+  }
+}
+
+section div:hover a span:nth-child(4) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(to top, #0c002b, #1779ff);
+  animation: animate4 2s linear infinite;
+  animation-delay: 1s;
+}
+
+@keyframes animate4 {
+  0% {
+    transform: translateY(100%);
+
+  }
+
+  100% {
+    transform: translateY(-100%);
+
+  }
+}
+
+// .sectionWithPicture {
+//   background-image: url("../bg/wideBG.jpg");
+//   background-size: 100%;
+//   background-repeat: no-repeat;
+//   overflow: hidden;
+//   height: 300px;
+//   width: 100%;
+// }
+//////////////////////////////////////////////////////////////////////////////
